2011-10-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/oci8.h: refactor OCIException and its
	    subclasses. OCIError#codes and OCIError#messages are deleted.
	* test/test_all.rb, test/test_error.rb: add a testcase to check
	    OCIException's methods.

2011-10-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix checking code whether 'sys/types.h' is
	    available for Ubuntu 11.10 where sys/types.h is not right under
	    /usr/include.

2011-10-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: remove code to get linker options for Oracle 8
	    and Oracle 8i.

2011-10-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: embed a run-time loading path to the extention
	    library oci8lib_*.so compiled for not only full clients, but also
	    instant clients on Linux and Solaris.
	    (suggested by d c and others.)

2011-10-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c, lib/oci8/datetime.rb, lib/oci8/object.rb:
	    add OCI8::BindType::OCITimestamp, OCI8::BindType::LocalDateTime,
	    OCI8::BindType::UTCDateTime, OCI8::BindType::LocalTime and
	    OCI8::BindType::UTCTime. The first is used for internal use.
	    The others are used for timestamp (without time zone) datatype.

2011-10-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/ocidatetime.c, ext/oci8/oradate.c: delete
	    subversion keywords.
	* ext/oci8/env.c, ext/oci8/oci8.h, ext/oci8/thread_util.c,
	  ext/oci8/thread_util.h: use thread-local errhp not only at ruby 1.9
	    and rubinius, but also ruby 1.8 configured with --enable-pthread.

2011-10-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/connection_pool.c, ext/oci8/lob.c,
	  ext/oci8/metadata.c, ext/oci8/object.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c, ext/oci8/ocihandle.c,
	  ext/oci8/ocinumber.c, ext/oci8/oradate.c, ext/oci8/stmt.c:
	    rename oci8_*_class to oci8_*_vtable because they correspond to